--- a/Simulation/notebook.ipynb
+++ b/Simulation/notebook.ipynb
@@ -7,7 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from model import vertical_fdi_separated"
+    "from model import vertical_fdi_separated, vertical_fdi_integrated"
    ]
   },
   {
@@ -20,17 +20,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ball_bearing price: 60.5\n",
-      "machine_price: 182.5\n",
-      "machines_quanity: 28.75\n",
-      "bearings_quantity: 57.5\n",
-      "slovenian_profit: 3306.25\n",
-      "greek_profit: 1653.12\n"
+      "ball_bearing_price: 6\n",
+      "machine_price: 126.0\n",
+      "machine_quantity: 57.0\n",
+      "bearing_quantity: 114.0\n",
+      "integrated_profit: 5498.0\n"
      ]
     }
    ],
    "source": [
-    "results = vertical_fdi_separated()\n",
+    "results = vertical_fdi_integrated()\n",
     "#print(results)\n",
     "for k, v in results.items():\n",
     "    print(f'{k}: {round(v, 2)}')"
@@ -40,6 +39,22 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "45742326",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "16567514",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de66a549",
    "metadata": {},
    "outputs": [],
    "source": []
