--- a/Simulation/notebook.ipynb
+++ b/Simulation/notebook.ipynb
@@ -21,10 +21,11 @@
      "output_type": "stream",
      "text": [
       "ball_bearing_price: 6\n",
-      "machine_price: 126.0\n",
-      "machine_quantity: 57.0\n",
-      "bearing_quantity: 114.0\n",
-      "integrated_profit: 5498.0\n"
+      "machine_price: 128.0\n",
+      "machine_quantity: 56.0\n",
+      "bearing_quantity: 112.0\n",
+      "integrated_profit: 5272.0\n",
+      "fixed_cost: 1000\n"
      ]
     }
    ],
